Java6 works